switched meta to be TMDB based
